samples/_failures_safe/1761265861_7ffe2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e05e12ef.c: In function ‘main’:
./samples/SAFE/__tmp_e05e12ef.c:149:5: error: expected expression at end of input
  149 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_e05e12ef.c:149:5: error: expected declaration or statement at end of input
